--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,15 +11,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".settings" />
-        <activity android:name=".start" />
-        <activity android:name=".normal" />
-        <activity android:name=".game_finished" />
-        <activity android:name=".join" />
-        <activity android:name=".waiting" />
-        <activity android:name=".create" />
-        <activity android:name=".MainActivity" />
-        <activity android:name=".start_game"
+        <activity android:name=".activities.Settings" />
+        <activity android:name=".activities.MultiplayerMenu" />
+        <activity android:name=".activities.Normal" />
+        <activity android:name=".activities.GameFinished" />
+        <activity android:name=".activities.Join" />
+        <activity android:name=".activities.Waiting" />
+        <activity android:name=".activities.Create" />
+        <activity android:name=".activities.Multiplayer" />
+        <activity android:name=".activities.MainActivity"
                 android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
