--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="com.google.android.gms.permission.AD_ID"/>
@@ -11,17 +12,28 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".activities.Settings" />
-        <activity android:name=".activities.MultiplayerMenu" />
-        <activity android:name=".activities.Normal" />
-        <activity android:name=".activities.GameFinished" />
-        <activity android:name=".activities.Join" />
-        <activity android:name=".activities.Waiting" />
-        <activity android:name=".activities.Create" />
-        <activity android:name=".activities.Multiplayer" />
+        android:theme="@style/AppTheme"
+        tools:ignore="DiscouragedApi,LockedOrientationActivity">
+        <activity android:name=".activities.Settings"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activities.MultiplayerMenu"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activities.Normal"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activities.GameFinished"
+            android:screenOrientation="portrait" />
+        <activity android:name=".activities.Join"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activities.Waiting"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activities.Create"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activities.Multiplayer"
+            android:screenOrientation="portrait" />
         <activity android:name=".activities.MainActivity"
-                android:exported="true" >
+            android:screenOrientation="portrait"
+                android:exported="true"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
