--- a/gradle.properties
+++ b/gradle.properties
@@ -17,4 +17,5 @@ android.enableJetifier=true
 android.defaults.buildfeatures.buildconfig=true
 android.nonTransitiveRClass=false
 android.nonFinalResIds=false
+org.gradle.configuration-cache=true
 
